# python_ht

./: .gitignore  README.md
1-oop/: main.py
2-decorators/: main.py
3-oop-base/: main.py
4-school/: README.md  main.py
4-school/models/: lesson_model.py  student_model.py
4-school/repositories/: journal_repo.py
4-school/services/: journal_service.py  notification_service.py  stat_service.py
5-slots/: main.py
6-cache/: main.py
7-email/: main.py
8-final/: pyproject.toml
8-final/textual_app/: app.py  entrypoint.py
8-final/textual_app/domain/: __init__.py  monitor_data.py  status.py
8-final/textual_app/repositories/: __init__.py  base_monitor_data_repository.py  file_monitor_data_repository.py
8-final/textual_app/screens/: main.py
8-final/textual_app/services/: monitor_service.py
8-final/textual_app/widgets/: MonitoringTable.py  TextInput.py  __init__.py
PythonApp/: PythonApp.pyproj  PythonApp.sln  main.py  pyproject.toml
PythonApp/data/new/: test.md
PythonApp/note_app/: app.py  cli.py
PythonApp/note_app/config/: __init__.py  config.py
PythonApp/note_app/domain/: __init__.py  folder.py  note.py
PythonApp/note_app/repositories/: __init__.py  base_folder_repository.py  base_note_repository.py  folder_repository.py  note_repostory.py
PythonApp/note_app/screens/: __init__.py  import_modal.py  main.py
PythonApp/note_app/widgets/: __init__.py  file_tree.py  markdown.py  note_view.py
PythonApp/scripts/: lint.py
