[project]
name = "note-app"
version = "0.1.0"
description = ""
authors = [
    {name = "NicaZadirieva",email = "no.demchenko@yandex.ru"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=7.4.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
