[project]
name = "note_app"
version = "0.1.0"
description = ""
authors = [
    {name = "NicaZadirieva",email = "no.demchenko@yandex.ru"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=7.4.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "html2text (>=2025.4.15,<2026.0.0)"
]

[tool.poetry]
package-mode = true

[tool.poetry.scripts]
app = "note_app.cli:run"
lint = "scripts.lint:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]
